@@ -212,6 +212,16 @@ and <b>abort</b> execution and transaction and fail task.</p>
     "GO ").  <em>Since Ant 1.8.0</em>.</td>
   <td width="10%" valign="top">No, default <em>true</em></td>
 </tr>
+
+<tr>
+  <td width="12%" valign="top">showWarnings</td>
+  <td width="78%" valign="top">If true, SQLWarnings will be logged at
+    the WARN level.  <em>Since Ant 1.8.0</em>.<br/>
+    <b>Note:</b> even if the attribute is set to false, warnings that
+    apply to the connection will be logged at the verbose level.</td>
+  <td width="10%" valign="top">No, default <em>false</em></td>
+</tr>
+
 </table>
 
 <h3>Parameters specified as nested elements</h3>
